--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <div class="Yo">
-        <h1>Yo soy:</h1>
         <p>Hola, me llamo Jorge Parra, actualmente estudiante del Arturo Matte Larrain, cursando el tercer año de media en la especialidad de Progamacion, a pesar de eso, en el futuro me gustaria estudiar Robotica en una buena universidad y dedicarme a eso, y en mis tiempos libres dedicarme a la creacion de videojuegos y modelacion y animacion 3D, en caso de que lo de robotica no funcione.</p>
     </div>
     <div class="Gustos">
-        <h3>Mis Gustos e Intereses:</h3>
-        <p>Como ya dije previamente, me gusta mucho la robotica, la creacion de videojuegos y la animacion 3D, pero tambien amo hacer Manualidades, escuchar musica y dibujar de vez en cuando.</p>
-        <h3>Mi forma de ser:</h3>
-        <p>Siempre busco que todo este tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo facil y rapido, y obviamente que funcione.</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_g2MQIHhh7UQpIm-ALczZUBkLNHpQaG28JA&s" alt="me pica un pulmon">
     </div>
 </body>
 </html>
