--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="Yo">
-        <p>Hola, me llamo Jorge Parra, actualmente estudiante del Arturo Matte Larrain, cursando el tercer año de media en la especialidad de Progamacion, a pesar de eso, en el futuro me gustaria estudiar Robotica en una buena universidad y dedicarme a eso, y en mis tiempos libres dedicarme a la creacion de videojuegos y modelacion y animacion 3D, en caso de que lo de robotica no funcione.</p>
+        <h3>Hola, me llamo Jorge Parra, actualmente estudiante del Arturo Matte Larrain, cursando el tercer año de media en la especialidad de Progamacion, a pesar de eso, en el futuro me gustaria estudiar Robotica en una buena universidad y dedicarme a eso, y en mis tiempos libres dedicarme a la creacion de videojuegos y modelacion y animacion 3D, en caso de que lo de robotica no funcione.</h3>
     </div>
     <div class="Gustos">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_g2MQIHhh7UQpIm-ALczZUBkLNHpQaG28JA&s" alt="me pica un pulmon">
