--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     </div>
     <div class="Gustos">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_g2MQIHhh7UQpIm-ALczZUBkLNHpQaG28JA&s" alt="me pica un pulmon">
+        <div class="nada"></div>
+        <div class="mas">
+            <a href="">Más sobre mi</a>
+        </div>
     </div>
 </body>
 </html>
