--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mi</title>
+    <link rel="stylesheet" href="si/index.html">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_g2MQIHhh7UQpIm-ALczZUBkLNHpQaG28JA&s" alt="me pica un pulmon">
         <div class="nada"></div>
         <div class="mas">
-            <a href="">Más sobre mi</a>
+            <a href="si/index.html">Más sobre mi</a>
         </div>
     </div>
 </body>
