--- a/si/index.html
+++ b/si/index.html
@@ -6,6 +6,11 @@
     <title>Mas de mi</title>
 </head>
 <body>
-    
+    <div>
+        <h3>Mis Gustos e Intereses:</h3>
+        <p>Como ya dije previamente, me gusta mucho la robotica, la creacion de videojuegos y la animacion 3D, pero tambien amo hacer Manualidades, escuchar musica y dibujar de vez en cuando.</p>
+        <h3>Mi forma de ser:</h3>
+        <p>Siempre busco que todo este tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo facil y rapido, y obviamente que funcione.</p>
+    </div>
 </body>
 </html>
