--- a/si/index.html
+++ b/si/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mas de mi</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div>
         <h3>Mis Gustos e Intereses:</h3>
-        <p>Como ya dije previamente, me gusta mucho la robotica, la creacion de videojuegos y la animacion 3D, pero tambien amo hacer Manualidades, escuchar musica y dibujar de vez en cuando.</p>
+        <p>Me gusta mucho la robótica, la creación de videojuegos y la animación 3D, pero también amo hacer manualidades, escuchar música y dibujar de vez en cuando.</p>
         <h3>Mi forma de ser:</h3>
-        <p>Siempre busco que todo este tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo facil y rapido, y obviamente que funcione.</p>
+        <p>Siempre busco que todo esté tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo fácil y rápido, y obviamente que funcione.</p>
     </div>
 </body>
 </html>
