--- a/si/index.html
+++ b/si/index.html
@@ -9,9 +9,9 @@
 <body>
     <div>
         <h3>Mis Gustos e Intereses:</h3>
-        <p>Me gusta mucho la robótica, la creación de videojuegos y la animación 3D, pero también amo hacer manualidades, escuchar música y dibujar de vez en cuando.</p>
+        <h2>Me gusta mucho la robótica, la creación de videojuegos y la animación 3D, pero también amo hacer manualidades, escuchar música y dibujar de vez en cuando.</h2>
         <h3>Mi forma de ser:</h3>
-        <p>Siempre busco que todo esté tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo fácil y rápido, y obviamente que funcione.</p>
+        <h2>Siempre busco que todo esté tranquilo y en orden, soy algo organizado, y no importa que tan dificil sea el reto que me pongas buscare la mejor forma de hacerlo fácil y rápido, y obviamente que funcione.</h2>
     </div>
 </body>
 </html>
